mxslc/tests/data/error/version_2.mxsl
#version 1.39.2

float x = fract(2.5);